--- a/GradeTwelveExercise/complex-exam-2015-science.html
+++ b/GradeTwelveExercise/complex-exam-2015-science.html
@@ -1,1 +1,23 @@
-<p>Hello new world!</p>
+<div class="section">
+    <p class="leftSection">ប្រធាន</p>
+    <p>(១៥ពិន្ទុ)</p>
+    <p>គេឱ្យចំនួនកុំផ្លិច$z_1=-1+i\sqrt{3}~,$ $z_2=1-i\sqrt{3}$។</p>
+    <ol class="khmer">
+        <li>គណនា$z_1+z_2~,$ $z_1-z_2~,$ $z_1z_2$។</li>
+        <li>សរសេរជាទម្រង់ត្រីកោណមាត្រនៃចំនួនកុំផ្លិច$z_1-z_2~,$ $z_1z_2$។</li>
+    </ol>
+</div>
+<div class="section">
+    <p class="centerSection">ចម្លើយ</p>
+    <ol class="khmer">
+        <li><span class="boldFont">គណនា$z_1+z_2~,$ $z_1-z_2~,$ $z_1z_2$</span>
+            <p>មាន$z_1=-1+i\sqrt{3}~,$ $z_2=1-i\sqrt{3}$</p>
+            <p>គេបាន$$\begin{aligned}\color{red}{\bullet}~&z_1+z_2=\left(-1+i\sqrt{3}\right)+\left(1-i\sqrt{3}\right)\\&\quad=-1+i\sqrt{3}+1-i\sqrt{3}\\&\quad=0\\&\boxed{z_1+z_2=0}\\\color{red}{\bullet}~&z_1-z_2=\left(-1+i\sqrt{3}\right)-\left(1-i\sqrt{3}\right)\\&\quad=-1+i\sqrt{3}-1+i\sqrt{3}\\&\quad=-2+2\sqrt{3}i\\&\boxed{z_1-z_2=-2+2\sqrt{3}i}\\\color{red}{\bullet}~&z_1z_2=\left(-1+i\sqrt{3}\right)\left(1-i\sqrt{3}\right)\\&\quad=-1+i\sqrt{3}+i\sqrt{3}-\left(i\sqrt{3}\right)^2\\&\quad=-1+2\sqrt{3}i+3=2+2\sqrt{3}i\\&\boxed{z_1z_2=2+2\sqrt{3}i}\end{aligned}$$</p>
+        </li>
+        <li><span class="boldFont">សរសេរជាទម្រង់ត្រីកោណមាត្រនៃចំនួនកុំផ្លិច$z_1-z_2~,$ $z_1z_2$</span>
+            <p>គេបាន$$\begin{aligned}\color{red}{\bullet}~&z_1-z_2=-2+2\sqrt{3}i\\&\quad=4\left(-\dfrac{1}{2}+\dfrac{\sqrt{3}}{2}i\right)\\&\quad=4\left(\cos\frac{2\pi}{3}+i\sin\frac{2\pi}{3}\right)\\&\boxed{z_1-z_2=4\left(\cos\frac{2\pi}{3}+i\sin\frac{2\pi}{3}\right)}\\\color{red}{\bullet}~&z_1z_2=2+2\sqrt{3}i\\&\quad=4\left(\dfrac{1}{2}+\dfrac{\sqrt{3}}{2}i\right)\\&\quad=4\left(\cos\frac{\pi}{3}+i\sin\frac{\pi}{3}\right)\\&\boxed{z_1z_2=4\left(\cos\frac{\pi}{3}+i\sin\frac{\pi}{3}\right)}\end{aligned}$$</p>
+        </li>
+    </ol>
+</div>
+
+
