--- a/GradeTwelveExercise/complex-exam-2015-science.html
+++ b/GradeTwelveExercise/complex-exam-2015-science.html
@@ -16,7 +16,7 @@
         </li>
         <li><span class="boldFont">សរសេរជាទម្រង់ត្រីកោណមាត្រនៃចំនួនកុំផ្លិច$z_1-z_2~,$ $z_1z_2$</span>
             <p>គេបាន$$\begin{aligned}\color{red}{\bullet}~&z_1-z_2=-2+2\sqrt{3}i\\&\quad=4\left(-\dfrac{1}{2}+\dfrac{\sqrt{3}}{2}i\right)\\&\quad=4\left(\cos\frac{2\pi}{3}+i\sin\frac{2\pi}{3}\right)\\&\boxed{z_1-z_2=4\left(\cos\frac{2\pi}{3}+i\sin\frac{2\pi}{3}\right)}\\\color{red}{\bullet}~&z_1z_2=2+2\sqrt{3}i\\&\quad=4\left(\dfrac{1}{2}+\dfrac{\sqrt{3}}{2}i\right)\\&\quad=4\left(\cos\frac{\pi}{3}+i\sin\frac{\pi}{3}\right)\\&\boxed{z_1z_2=4\left(\cos\frac{\pi}{3}+i\sin\frac{\pi}{3}\right)}\end{aligned}$$</p>
-            <img src="latexImage.png">
+            <img src="latexImag.png">
         </li>
     </ol>
 </div>
