--- a/GradeTenExercise/exam-1.html
+++ b/GradeTenExercise/exam-1.html
@@ -1,3 +1,20 @@
 <div class="section">
   <p class="leftSection">ប្រធាន</p>
+  <ol class="Roman">
+    <li>ចូរសង់តារាងភាពពិតតាងសំណើ$p\land q$ និង$\overline{p}\lor q$ ។</li>
+    <li>ចូរបង្ហាញថា$(x-2)(x+1)=0$លុះត្រាតែ$x=2$ឬ$x=-1$ ។</li>
+    <li>គេមានសំណុំសកល$U=\{x\mid x\,\text{ជាចំនួនគត់រ៉ឺឡាទីបដែល}\,1\le x\le 10\}$ និងសំណុំរងពីរគឺ$A=\{x\,\text{ជាចំនួនបឋម} \}$ និង$B=\{x\mid x\,\text{ជាចំនួនគត់គូ} \}$ ។
+      <ol>
+        <li>ចូរសរសេរសំណុំ$U,\,A$ និង$B$តាមការរៀបរាប់ឈ្មោះធាតុ ។</li>
+        <li>ចូរកំណត់សំណុំ$A\cap B$ និង$A\cup B$ ។</li>
+        <li>ចូរកំណត់សំណុំរងបំពេញនៃសំណុំ$A$ ។</li>
+      </ol>
+    </li>
+    <li>គេមានចំណុច$A(1,1)$ និង$B(5,4)$ស្ថិតនៅក្នុងប្លង់កូអរដោនេ ។
+      <ol>
+        <li>ចូររកចម្ងាយរវាងចំណុច$A$ និង$B$ ។</li>
+        <li>ចូររកកូអរដោនេនៃចំណុច$P$ចែកអង្កត់$AB$ខាងក្នុងតាមផលធៀប$1:2$ ។</li>
+      </ol>
+    </li>
+  </ol>
 </div>
