--- a/GradeTenExercise/grade-ten-exam-1.html
+++ b/GradeTenExercise/grade-ten-exam-1.html
@@ -3,7 +3,7 @@
   <ol class="Roman">
     <li>ចូរសង់តារាងភាពពិតតាងសំណើ$p\land q$ និង$\overline{p}\lor q$ ។</li>
     <li>ចូរបង្ហាញថា$(x-2)(x+1)=0$លុះត្រាតែ$x=2$ឬ$x=-1$ ។</li>
-    <li>គេមានសំណុំសកល$U=\{x\mid x\,\text{ជាចំនួនគត់រ៉ឺឡាទីបដែល}\,1\le x\le 10\}$ និងសំណុំរងពីរគឺ$A=\{x\,\text{ជាចំនួនបឋម} \}$ និង$B=\{x\mid x\,\text{ជាចំនួនគត់គូ} \}$ ។
+    <li>គេមានសំណុំសកល$U=\{x\mid x\,\text{ជាចំនួនគត់រ៉ឺឡាទីបដែល}\,1\le x\le 10\}$ និងសំណុំរងពីរនៃ$U$គឺ$A=\{x\,\text{ជាចំនួនបឋម} \}$ និង$B=\{x\mid x\,\text{ជាចំនួនគត់គូ} \}$ ។
       <ol>
         <li>ចូរសរសេរសំណុំ$U,\,A$ និង$B$តាមការរៀបរាប់ឈ្មោះធាតុ ។</li>
         <li>ចូរកំណត់សំណុំ$A\cap B$ និង$A\cup B$ ។</li>
