--- a/GradeTenExercise/grade-ten-exam-3.html
+++ b/GradeTenExercise/grade-ten-exam-3.html
@@ -14,7 +14,7 @@
     <li>គេមានសមីការ$x^2+y^2-4x-4y+4=0$ ។
       <ol>
         <li>ចូរបង្ហាញថាសមីការនេះជាសមីការរង្វង់ រួចកំណត់កូអរដោនេនៃផ្ចិត និងកាំនៃរង្វង់នេះ ។</li>
-        <li>ចំណុច$P$ស្ថិតនៅលើរង្វង់មានអាប់ស៊ីស$x=0$ ។ ចូររកសមីការបន្ទាត់$Delta$កាត់តាមចំណុច$P$ហើយមានមេគុណប្រាប់ទិសស្មើ$1$ ។</li>
+        <li>ចំណុច$P$ស្ថិតនៅលើរង្វង់មានអាប់ស៊ីស$x=0$ ។ ចូររកសមីការបន្ទាត់$\Delta$កាត់តាមចំណុច$P$ហើយមានមេគុណប្រាប់ទិសស្មើ$1$ ។</li>
         <li>ចូរសង់រង្វង់ និងបន្ទាត់$\Delta$ក្នុងតម្រុយកូអរដោនេតែមួយ ។</li>
       </ol>
     </li>
