--- a/GradeTenExercise/grade-ten-line-equation-exercise-1.html
+++ b/GradeTenExercise/grade-ten-line-equation-exercise-1.html
@@ -6,5 +6,12 @@
     <li>ចូរបង្ហាញថាចតុកោណដែលមានកំពូល$A(2,3),$ $B(9,5),$ $C(4,0)$ និង$D(-3,-2)$ ជាប្រលេឡូក្រាម ។</li>
     <li>គេមានចំណុច$A(0,0)$ និង$B(1,3)$ ។ ចូររកសមីការបន្ទាត់កាត់តាមចំណុច$(0,5)$ ហើយកែងនឹងបន្ទាត់$AB$។</li>
     <li>រកកូអរដោនេនៃចំណុចប្រសព្វរវាងបន្ទាត់$3x+4y-18=0$ និង$x-2y+4=0$។</li>
+    <li>គេមានចំណុច$A(4,4),$ $B(3,5)$ និង$C(-1,1)$ស្ថិតក្នុងប្លង់កូអរដោនេ ។
+      <ol>
+        <li>ចូររកមេគុណប្រាប់ទិសនៃបន្ទាត់$AB$ និង$BC$ ។ ទាញបញ្ជាក់ថាចំណុច$A,$ $B$ និង$C$រត់មិនត្រង់គ្នា ។</li>
+        <li>បង្ហាញថា$ABC$ជាត្រីកោណកែងត្រង់$B$ ។ គណនាផ្ទៃក្រឡាត្រីកោណ$ABC$ ។</li>
+        <li>$P$ជាចំណុចកណ្ដាលនៃអង្កត់$BC$ ។ ចូររកសមីការបន្ទាត់$\Delta$កាត់តាមចំណុច$P$ហើយស្របនឹងបន្ទាត់$AC$ ។</li>
+      </ol>
+    </li>
   </ol>
 </div>
