--- a/GradeTenExercise/grade-ten-set-exercise-1.html
+++ b/GradeTenExercise/grade-ten-set-exercise-1.html
@@ -37,5 +37,13 @@
         <li>$\overline{\overline{A}\cap B}$</li>
       </ol>
     </li>
+    <li>គេមានសំណុំសកល$U=\{x\mid x\,\text{ជាចំនួនគត់រ៉ឺឡាទីប:}\,1\lt x\lt 15 \},$និងសំណុំរងពីរនៃ$U$គឺ $A=\{x\mid x\,\text{ជាតួចែកវិជ្ជមាននៃ}\,12 \}$ និង$B=\{x\mid x\,\text{ជាតួចែកវិជ្ជមាននៃ}\,15 \}$ ។
+      <ol>
+        <li>ចូរកំណត់សំណុំ$U,$ $A$ និង$B$ តាមការរៀបរាប់ឈ្មោះធាតុ ។</li>
+        <li>ចូររកសំណុំ$A\cap B$ និង$A\cup B$ ។</li>
+        <li>ចូររកសំណុំរងបំពេញនៃសំណុំ$A$ ។</li>
+        <li>ចូររកសំណុំ$\overline{A\cup B}$ ។</li>
+      </ol>
+    </li>
   </ol>
 </div>
