--- a/GradeTenExercise/grade-ten-set-exercise-1.html
+++ b/GradeTenExercise/grade-ten-set-exercise-1.html
@@ -45,5 +45,22 @@
         <li>ចូររកសំណុំ$\overline{A\cup B}$ ។</li>
       </ol>
     </li>
+    <li>ក្នុងចំណោមមនុស្ស100នាក់ មនុស្ស26នាក់ធ្លាប់បានទៅលេងខេត្តសៀមរាប មនុស្ស31នាក់ធ្លាប់បានទៅលេងខេត្តរតនគីរី និងមនុស្ស12នាក់ធ្លាប់បានទៅលេខខេត្តទាំងពីរ ។ 
+      <ol>
+        <li>ចូររកចំនួនមនុស្សដែលបានទៅលេងខេត្តទាំងពីរនេះ ។</li>
+        <li>ចូររកចំនួនមនុស្សដែលបានទៅលេងខេត្តសៀមរាម តែមិនធ្លាប់ទៅលេខខេត្តរតនគីរី ។</li>
+        <li>ចូររកចំនួនមនុស្សដែលបានទៅលេងតែមួយខេត្ត ។</li>
+        <li>ចូររកចំនួនមនុស្សដែលមិនបានទៅលេងខេត្តណាមួយសោះ ។</li>
+      </ol>
+    </li>
+    <li>ក្នុងសាលារៀនមួយមានសិស្ស180នាក់ ។ គេដឹងថាសិស្ស110នាក់រៀនភាសាបារាំង 88នាក់រៀនភាសាអាល្លឺម៉ង់ និង65នាក់រៀនភាសាឥណ្ឌូនេស៊ី ។ សិស្ស40នាក់រៀនភាសាបារាំង និងអាល្លឺម៉ង់ សិស្ស38នាក់រៀនតែភាសាអាល្លឺម៉ង់មួយប៉ុណ្ណោះ ។ 
+      <p>រកចំនួនសិស្សដែល</p>
+      <ol>
+        <li>រៀនទាំងបីភាសា ។</li>
+        <li>រៀនតែឥណ្ឌូនេស៊ីប៉ុណ្ណោះ ។</li>
+        <li>មិនរៀនភាសាណាមួយ ។</li>
+        <li>រៀនយ៉ាងហោចមួយភាសា ។</li>
+      </ol>
+    </li>
   </ol>
 </div>
