--- a/GradeTenExercise/grade-ten-line-equation-exercise-1.html
+++ b/GradeTenExercise/grade-ten-line-equation-exercise-1.html
@@ -13,5 +13,10 @@
         <li>$P$ជាចំណុចកណ្ដាលនៃអង្កត់$BC$ ។ ចូររកសមីការបន្ទាត់$\Delta$កាត់តាមចំណុច$P$ហើយស្របនឹងបន្ទាត់$AC$ ។</li>
       </ol>
     </li>
+    <li>ចូររកសមីការបន្ទាត់កាត់តាមចំណុច$(1,2)$ ហើយកែងនឹងបន្ទាត់$x+y+7=0$។</li>
+    <li>រកចម្ងាយពីចំណុច$(3,2)$ទៅបន្ទាត់$3x+4y=7$។</li>
+    <li>រកចម្ងាយពីចំណុច$(1,-3)$ទៅបន្ទាត់$y=\dfrac{3}{2}x+4$។</li>
+    <li>រកចម្ងាយពីបន្ទាត់$3x+4y-9=0$ទៅបន្ទាត់$3x+4y-\dfrac{15}{2}=0$។</li>
+    <li>បន្ទាត់$L$កាត់តាមចំណុច$A(3,2)$ និងមានមេគុណប្រាប់ទិសស្មើ$\dfrac{3}{4}$។ ចូររកចំណុច$M$ស្ថិតនៅលើបន្ទាត់$L$ដែលស្ថិតនៅចម្ងាយ$5$ឯកតាពីចំណុច$A$។</li>
   </ol>
 </div>
