--- a/GradeTenExercise/grade-ten-number-exercise-1.html
+++ b/GradeTenExercise/grade-ten-number-exercise-1.html
@@ -17,7 +17,7 @@
     <li>គេមាន$A=\sqrt{8-2\sqrt{15}}-\sqrt{8+2\sqrt{15}}$ និង$B=\sqrt{7+4\sqrt{3}}$ ។
       <ol>
         <li>គណនា$A^2$ រួចទាញរកតម្លៃនៃកន្សោម$A$ ។</li>
-        <li>បង្ហាញថា$A-2B$ជាចំនួនគត់ ។</li>
+        <li>បង្ហាញថា$A+2B$ជាចំនួនគត់ ។</li>
       </ol>
     </li>
     <li>គណនាកន្សោមខាងក្រោម៖
@@ -28,5 +28,32 @@
       </ol>
     </li>
     <li>ចូរប្រៀបធៀប$\dfrac{\sqrt{2-\sqrt{3}}}{2}$ និង$\dfrac{\sqrt{6}-\sqrt{2}}{4}$ ។</li>
+    <li>ចូរបំបាត់រ៉ាឌីកាល់ភាគបែងនៃប្រភាគខាងក្រោម៖
+      <ol>
+        <li>$A=\dfrac{\sqrt{2}+1}{\sqrt{2}}$</li>
+        <li>$B=\dfrac{\sqrt{5}-\sqrt{3}}{\sqrt{3}-2\sqrt{5}}$</li>
+        <li>$C=\dfrac{\sqrt{2}+2}{\sqrt{3}+\sqrt{2}}$</li>
+        <li>$D=\dfrac{1+\sqrt{5}}{\sqrt{5}-\sqrt{2}}$</li>
+      </ol>
+    </li>
+    <li>គណនា៖
+      <ol>
+        <li>$E=\dfrac{\sqrt{2}+1}{\sqrt{2}-1}-\dfrac{\sqrt{2}-1}{\sqrt{2}+1}$</li>
+        <li>$F=\dfrac{\sqrt{3}-2}{\sqrt{2}+1}-\dfrac{2}{\sqrt{2}-3}$</li>
+        <li>$G=\dfrac{\sqrt{5}}{\sqrt{2}+\sqrt{5}}-\dfrac{\sqrt{2}}{1-\sqrt{2}}$</li>
+      </ol>
+    </li>
+    <li>
+      <ol>
+        <li>ចំពោះ$p\gt 0$ចូរបង្ហាញថា$\sqrt{p+1}-\sqrt{p}$ជាចម្រាសនៃ$\sqrt{p+1}+\sqrt{p}$។</li>
+        <li>គណនា$E=\dfrac{1}{1+\sqrt{2}}+\dfrac{1}{\sqrt{2}+\sqrt{3}}+\dfrac{1}{\sqrt{3}+\sqrt{4}}+\cdots+\dfrac{1}{\sqrt{63}+\sqrt{64}}$</li>
+      </ol>
+    </li>
+    <li>គេមាន$x=\dfrac{\sqrt{5}-1}{2}$។
+      <ol>
+        <li>បង្ហាញថា$x^2+x-1=0$ និង$\dfrac{1}{x}=x+1$។</li>
+        <li>ទាញបញ្ជាក់ថា$\dfrac{\sqrt{x}}{\sqrt{x+1}}+\dfrac{\sqrt{x+1}}{\sqrt{x}}=\sqrt{5}$។</li>
+      </ol>
+    </li>
   </ol>
 </div>
