--- a/GradeTenExercise/grade-ten-number-exercise-2.html
+++ b/GradeTenExercise/grade-ten-number-exercise-2.html
@@ -24,7 +24,17 @@
         <li>$D=\sqrt{\left(3-\sqrt{3} \right)^2}-\sqrt{\left(4-\sqrt{3} \right)^2}$</li>
       </ol>
     </li>
-    <li>សម្រួលកន្សោម</li>
+    <li>គេឱ្យ$a=\sqrt{50}-\sqrt{8}\left(\sqrt{2}+1 \right)$ និង$b=\left(1+\sqrt{2} \right)^2+\left\lvert -1-\sqrt{2}\right\rvert$។
+      <ol>
+        <li>បង្ហាញថា$a=3\sqrt{2}-4$ និង$b=3\sqrt{2}+4$។</li>
+        <li>បង្ហាញថា$ab=2$។</li>
+        <li>សរសេរ$\dfrac{2}{b}$ជាប្រភាគមានភាគបែងជាចំនួនគត់ ។</li>
+        <li>បង្ហាញថា$\sqrt{\dfrac{1}{a}-\dfrac{1}{b}+5}$ជាចំនួនគត់ធម្មជាតិ ។</li>
+        <li>បង្ហាញថា$0\lt a\lt 1$។</li>
+        <li>រៀប$a,$ $\sqrt{a}$ និង$a^2$តាមលំដាប់កើន ។</li>
+        <li>ទាញបញ្ជាក់ថា$\left\lvert a^2-a\right\rvert+\left\lvert a-\sqrt{a}\right\rvert-\left\lvert \sqrt{a}-a^2\right\rvert=0$</li>
+      </ol>
+    </li>
   </ol>
 
 </div>
