--- a/GradeTenExercise/grade-ten-polynomial-division-exercise-2.html
+++ b/GradeTenExercise/grade-ten-polynomial-division-exercise-2.html
@@ -9,6 +9,6 @@
         <li>ចូរសម្រួលប្រភាគ$E=\dfrac{P(x)}{-2x^2-x+15}$</li>
       </ol>
     </li>
-    <li>បើគេចែក$x^2+2x-3$នឹង$P(x)$គេបានផលចែក$x+2$ និងសំណល់$5$។ រក$P(x)$។</li>
+    <li>បើគេចែក$x^2+2x-3$នឹង$P(x)$គេបានផលចែក$x-2$ និងសំណល់$5$។ រក$P(x)$។</li>
   </ol>
 </div>
