--- a/GradeTenExercise/grade-ten-polynomial-division-exercise-3.html
+++ b/GradeTenExercise/grade-ten-polynomial-division-exercise-3.html
@@ -1,3 +1,7 @@
 <div class="section">
-    
+    <p class="leftSection">ប្រធាន</p>
+    <ol class="arabic">
+        <li>គេមាន$F(x)=\dfrac{3x-1}{x^2-2x-3}$។ ចូររកចំនួនពិត$A$ និង$B$ដែល$F(x)=\dfrac{A}{x+1}+\dfrac{B}{x-3}$។</li>
+        <li>គេមាន$G(x)=\dfrac{3x+4}{x^2+3x+2}$។ ចូររកចំនួនពិត$A$ និង$B$ដែល$F(x)=\dfrac{A}{x+1}+\dfrac{B}{x+2}$។</li>
+    </ol>
 </div>
