--- a/GradeTenExercise/grade-ten-polynomial-division-exercise-4.html
+++ b/GradeTenExercise/grade-ten-polynomial-division-exercise-4.html
@@ -14,7 +14,7 @@
       <ol>
         <li>$\dfrac{1}{x^2-2x-8}\div\left(\dfrac{1}{x-4}-\dfrac{1}{x+2}\right)$</li>
         <li>$\dfrac{9-4x^2}{x+2}\div (2x-3)$</li>
-        <li>$left(2-\dfrac{6}{x+1}\right)\left(1+\dfrac{3}{x-2}\right)$</li>
+        <li>$\left(2-\dfrac{6}{x+1}\right)\left(1+\dfrac{3}{x-2}\right)$</li>
         <li>$\dfrac{a^{-1}-(a+5)^{-1}}{5}$</li>
         <li>$\dfrac{a^{-1}-(a+2)^{-1}}{2}$</li>
       </ol>
