--- a/GradeTenExercise/grade-ten-second-degree-equation-exercise-5.html
+++ b/GradeTenExercise/grade-ten-second-degree-equation-exercise-5.html
@@ -32,13 +32,13 @@
     <li>$\alpha$និង$\beta$ជាឫសនៃសមីការ$3x^2-9x+1=0$។ ចូររកសមីការដឺក្រេទី២ដែលមានឫស$\dfrac{1}{\alpha\beta^2}$និង$\dfrac{1}{\alpha^2\beta}$។</li>
     <li>ឫសនៃសមីការ$2x^2-12x+p+2=0$គឺ$k$និង$k+2$។ ចូររកតម្លៃ$p$។</li>
     <li>ឫសនៃសមីការ$x^2-kx+k-1=0$គឺ$\alpha$និង$2\alpha$។ ចូររកតម្លៃនៃ$k$។</li>
-    <li>ឫសនៃសមីការ$x^2+7x-2=0$គឺ$\alpah$និង$\beta$។ 
+    <li>ឫសនៃសមីការ$x^2+7x-2=0$គឺ$\alpha$និង$\beta$។ 
       <ol>
         <li>ចូរគណនាតម្លៃនៃ$\alpha^2+\beta^2$និង$\alpha^2\beta^2$។</li>
         <li>ចូររកសមីការដឺក្រេទី២ដែលមានឫស$\alpha^2$និង$\beta^2$។
       </ol>
     </li>
-    <li>ឫសនៃសមីការ$3x^2-6x-2=0$គឺ$\alpah$និង$\beta$។ 
+    <li>ឫសនៃសមីការ$3x^2-6x-2=0$គឺ$\alpha$និង$\beta$។ 
       <ol>
         <li>ចូរគណនាតម្លៃនៃ$\alpha^2+\beta^2$។</li>
         <li>ចូររកសមីការដឺក្រេទី២ដែលមានឫស$\alpha^2+1$និង$\beta^2+1$។
