--- a/GradeTenExercise/grade-ten-second-degree-equation-exercise-5.html
+++ b/GradeTenExercise/grade-ten-second-degree-equation-exercise-5.html
@@ -51,5 +51,6 @@
       </ol>
     </li>
     <li>គេដឹងថា$m+2$និង$n-1$ជាឫសនៃសមីការ$x^2+5x=-4$។ ចូររកតម្លៃនៃ$m$និង$n$។</li>
+    <li>ឫសនៃសមីការ$2ax^2+x+3b=0$គឺ$-\dfrac{3}{2}$និង$\dfrac{4}{3}$។ ចូររកតម្លៃនៃ$a$និង$b$។</li>
   </ol>
 </div>
