--- a/GradeTenExercise/grade-ten-vector-exercise-1.html
+++ b/GradeTenExercise/grade-ten-vector-exercise-1.html
@@ -2,7 +2,7 @@
   <p class="leftSection">ប្រធាន</p>
   <ol class="Roman">
     <li>គេមានវ៉ិចទ័រ$\overrightarrow{OA}$ និង$\overrightarrow{OB}$ដែល$\left|\overrightarrow{OA}\right|=25$ និង$\left|\overrightarrow{OB}\right|=15$ ហើយវ៉ិចទ័រទាំងពីរផ្គុំបានមុំ$\theta=45^{\circ}$។ គណនាប្រវែងវ៉ិចទ័រ$\overrightarrow{OA}+\overrightarrow{OB}$។</li>
-    <li>គេឱ្យវ៉ិចទ័រ$\vec{a}$ និង$\vec{b}$ដែលមុំរវាងវ៉ិចទ័រទាំងពីរគឺ$60^{\circ},$ $\left| \vec{a}\right|=3$ និង$\left| \vect{b}\right|=2$។ កំណត់$\left|\vec{a}+\vec{b} \right|$។</li>
+    <li>គេឱ្យវ៉ិចទ័រ$\vec{a}$ និង$\vec{b}$ដែលមុំរវាងវ៉ិចទ័រទាំងពីរគឺ$60^{\circ},$ $\left| \vec{a}\right|=3$ និង$\left| \vec{b}\right|=2$។ កំណត់$\left|\vec{a}+\vec{b} \right|$។</li>
     <li>$G$ជាចំណុចប្រសព្វនៃមេដ្យានទាំងបីនៃត្រីកោណ$ABC$។ ចូរបង្ហាញថា$\overrightarrow{GA}+\overrightarrow{GB}+\overrightarrow{GC}=\overrightarrow{0}$។</li>
     <li>$ABCD$ជាប្រលេឡូក្រាមដែលមានអង្កត់ទ្រូង$BD$និង$AC$កាត់គ្នាត្រង់ចំណុច$E$។ ចូរបង្ហាញថា$\overrightarrow{EA}+\overrightarrow{EB}+\overrightarrow{EC}+\overrightarrow{ED}=\overrightarrow{0}$។</li>
   </ol>
