--- a/GradeTenExercise/grade-ten-vector-exercise-1.html
+++ b/GradeTenExercise/grade-ten-vector-exercise-1.html
@@ -5,5 +5,11 @@
     <li>គេឱ្យវ៉ិចទ័រ$\vec{a}$ និង$\vec{b}$ដែលមុំរវាងវ៉ិចទ័រទាំងពីរគឺ$60^{\circ},$ $\left| \vec{a}\right|=3$ និង$\left| \vec{b}\right|=2$។ កំណត់$\left|\vec{a}+\vec{b} \right|$។</li>
     <li>$G$ជាចំណុចប្រសព្វនៃមេដ្យានទាំងបីនៃត្រីកោណ$ABC$។ ចូរបង្ហាញថា$\overrightarrow{GA}+\overrightarrow{GB}+\overrightarrow{GC}=\overrightarrow{0}$។</li>
     <li>$ABCD$ជាប្រលេឡូក្រាមដែលមានអង្កត់ទ្រូង$BD$និង$AC$កាត់គ្នាត្រង់ចំណុច$E$។ ចូរបង្ហាញថា$\overrightarrow{EA}+\overrightarrow{EB}+\overrightarrow{EC}+\overrightarrow{ED}=\overrightarrow{0}$។</li>
+    <li>វ៉ិចទ័រ$\vec{u}$និង$\vec{v}$មានប្រវែង$12$និង$5$រៀងគ្នា ។
+      <ol>
+        <li>រកប្រវែងធំបំផុត និងតូចបំផុតនៃ$\vec{u}+\vec{v}$។</li>
+        <li>បើ$\vec{u}$និង$\vec{v}$ជាវ៉ិចទ័រកែងគ្នា ចូរគណនាប្រវែងនៃវ៉ិចទ័រ$\vec{u}+\vec{v}$។</li>
+      </ol>
+    </li>
   </ol>
 </div>
