--- a/GradeTenExercise/grade-ten-vector-practice-exercise-2.html
+++ b/GradeTenExercise/grade-ten-vector-practice-exercise-2.html
@@ -1,7 +1,7 @@
 <div class="section">
   <p class="leftSection">ប្រធាន</p>
   <ol class="Roman">
-    <li>គេមានវ៉ិចទ័រ$\vec{a}=(2,3$ និង$\vec{b}=(-1,4)$។ ចូរគណនា៖
+    <li>គេមានវ៉ិចទ័រ$\vec{a}=(2,3)$ និង$\vec{b}=(-1,4)$។ ចូរគណនា៖
       <ol>
         <li>$\left|\vec{a} \right|$</li>
         <li>$\left|\vec{a}+\vec{b} \right|$</li>
