--- a/GradeTenExercise/grade-ten-rational-and-irrational-function-exercise-2.html
+++ b/GradeTenExercise/grade-ten-rational-and-irrational-function-exercise-2.html
@@ -17,5 +17,14 @@
         <li>សង់ក្រាបនៃ$f$ រួចទាញរកក្រាបនៃ$f^{-1}$។</li>
       </ol>
     </li>
+    <li>គេមានអនុគមន៍$f(x)=\sqrt{x+2}$។
+      <ol>
+        <li>រកដែនកំណត់ និងសំណុំរូបភាពនៃ$f$។</li>
+        <li>រក$f^{-1}$ដែលជាអនុគមន៍ច្រាសនៃ$f$។</li>
+        <li>រកកូអរដោនេនៃចំណុចប្រសព្វរវាងក្រាបនៃ$f$ និងបន្ទាត់$y=x$</li>
+        <li>សង់ក្រាបនៃ$f$ និងបន្ទាត់$y=x$។</li>
+        <li>ដោះស្រាយវិសមីការ$\sqrt{x+2}\gt x$តាមក្រាប ។</li>
+      </ol>
+    </li>
   </ol>
 </div>
