--- a/GradeTenExercise/grade-ten-semester-two-exercise-1.html
+++ b/GradeTenExercise/grade-ten-semester-two-exercise-1.html
@@ -3,11 +3,15 @@
   <ol class="Roman">
     <li>ដោះស្រាយសមីការ និងវិសមីការ
       <ol>
+        <li>$\left|3x-8\right|=5x$</li>
+        <li>$\left|x^2+5x+4\right|=0$</li>
+        <li>$\left|x+3\right|=x^2-4x-3$</li>
+        <li>$\left|3x-4\right|=\left|x\right|$</li>
+        <li>$\left|4x-10\right|=2\left|3x+1\right|$</li>
         <li>$-4\left|x+3\right|\ge 8$</li>
         <li>$\dfrac{\left| 3x-9\right|}{2}\le 12$</li>
         <li>$-5\left| x-3\right|\ge 15$</li>
         <li>$\left|9-3x\right|\le 6$</li>
-        <li>$\left|3x-8\right|=5x$</li>
         <li>$\left|5x+2\right|+3x\le 8$</li>
       </ol>
     </li>
