--- a/GradeTenExercise/grade-ten-semester-two-exercise-1.html
+++ b/GradeTenExercise/grade-ten-semester-two-exercise-1.html
@@ -35,6 +35,19 @@
         <li>$(2,3),$ $(6,3)$ និង$(8,-3)$</li>
       </ol>
     </li>
+    <li>ដោះស្រាយវិសមីការ
+      <ol>
+        <li>$2(x-3)+5\lt 5x-6\le \dfrac{3x+4}{3}$</li>
+        <li>$x^2+3x\le \dfrac{3}{4}x^2-\dfrac{1}{4}x-\dfrac{15}{2}$</li>
+      </ol>
+    </li>
+    <li>ចូរកំណត់តម្លៃ$k$ដើម្បីឱ្យ
+      <ol>
+        <li>$x+2$ជាកត្តានៃ$P(x)=2x^3+x^2+kx-4$។</li>
+        <li>$x-3$ជាកត្តានៃ$Q(x)=x^4-3x^3-kx^2+6x$</li>
+      </ol>
+    </li>
+    <li>ចូរកំណត់តម្លៃ$k$ដើម្បីឱ្យពហុធា$p(x)=x^3-4x^2-7x+k$ចែកដាច់នឹង$x-1$រួចដោះស្រាយសមីការ$p(x)=0$ទៅតាមតម្លៃ$k$ដែលរកឃើញ ។</li>
   </ol>
 </div>
 
