--- a/GradeTenExercise/grade-ten-semester-two-exercise-3.html
+++ b/GradeTenExercise/grade-ten-semester-two-exercise-3.html
@@ -1,6 +1,14 @@
 <div class="section">
   <p class="leftSection">ប្រធាន</p>
   <ol class="Roman">
+    <li>ដោះស្រាយសមីការ និងវិសមីការ
+      <ol>
+        <li>$\dfrac{4x}{x^2+x-6}=\dfrac{7x}{x^2-5x-24}$</li>
+        <li>$\dfrac{1-4x^{-1}+3x^{-2}}{1-9x^{-2}}=\dfrac{x-1}{x+3}$</li>
+        <li>$\dfrac{3x}{x+2}-\dfrac{2}{x+4}\ge 7$</li>
+        <li>$\dfrac{6}{x-3}\gt \dfrac{x}{4}+5$</li>
+      </ol>
+    </li>
     <li>គេចង់បង្កើតក្រុមមួយមានមនុស្ស5នាក់ ដែលជ្រើសចេញពីក្រុមមនុស្សស្រី4នាក់ និងប្រុស7នាក់ ។ ក្នុងករណីខាងក្រោម៖
       <ol>
         <li>រកចំនួនរបៀបនៃការបង្កើតក្រុមនេះ ។</li>
