--- a/GradeTenExercise/grade-ten-semester-two-exercise-7.html
+++ b/GradeTenExercise/grade-ten-semester-two-exercise-7.html
@@ -9,7 +9,7 @@
         <li>$\dfrac{1-\tan^2 x}{1+\tan^2 x}=\cos^2 x-\sin^2 x$</li>
       </ol>
     </li>
-    <li>$l$ជាបន្ទាត់តាមចំណុច$(1,1)$និងមានវ៉ិចទ័រប្រាប់ទិស$\vec{u}=(1,2)$ ហើយ$l'$ជាបន្ទាត់កាត់តាមចំណុច$(1,5)$និងមានវ៉ិចទ័រប្រាប់ទិស$\vec{u')=(3,-4)$។
+    <li>$l$ជាបន្ទាត់តាមចំណុច$(1,1)$និងមានវ៉ិចទ័រប្រាប់ទិស$\vec{u}=(1,2)$ ហើយ$l'$ជាបន្ទាត់កាត់តាមចំណុច$(1,5)$និងមានវ៉ិចទ័រប្រាប់ទិស$\vec{u'}=(3,-4)$។
       <ol>
         <li>រកសមីការប៉ារ៉ាម៉ែត្រនៃបន្ទាត់$l$និង$l'$ដែលមាន$s$និង$t$ជាប៉ារ៉ាម៉ែត្ររៀងគ្នា ។</li>
         <li>រកកូអរដោនេនៃចំណុចប្រសព្វរវាងបន្ទាត់$l$និង$l'$។
