--- a/GradeTenExercise/grade-ten-semester-two-exercise-8.html
+++ b/GradeTenExercise/grade-ten-semester-two-exercise-8.html
@@ -13,6 +13,18 @@
         <li>គេមាន$f(x)=x^2-5x+2$។ ចូរគណនា$f(3-i)$។</li>
       </ol>
     </li>
+    <li>គេមានវ៉ិចទ័រ$\overrightarrow{OA}=\vec{i}+4\vec{j},$ $\overrightarrow{OB}=5\vec{i}+5\vec{j}$ និង$\overrightarrow{CB}=-\vec{i}+6\vec{j}$។
+      <ol>
+        <li>រកវ៉ិចទ័រ$\overrightarrow{AB}$រួចគណនាប្រវែងរបស់វា ។</li>
+        <li>រកប្រវែងវ៉ិចទ័រ$\overrightarrow{AC}$។</li>
+      </ol>      
+    </li>
+    <li>គេមានវ៉ិចទ័រ$\overrightarrow{AB}=2\vec{i}+7\vec{j}$ និង$\overrightarrow{AC}=4\vec{i}-5\vec{j}$។$D$ជាចំណុចស្ថិតលើអង្កត់$BC$ដែល$|BD|:|DC|=1:2$។
+      <ol>
+        <li>រកវ៉ិចទ័រ$\overrightarrow{BD}$ជាអនុគមន៍នៃ$\vec{i}$ និង$\vec{j}$។</li>
+        <li>រកប្រវែងវ៉ិចទ័រ$\overrightarrow{AD}$។</li>
+      </ol>      
+    </li>
     <li>រកតម្លៃនៃចំនួនពិត$x$និង$y$ដើម្បីឱ្យ$3+5i+x-yi=6-2i$។</li>
     <li>រកកូអរដោនេនៃចំណុចប្រសព្វរវាងប៉ារ៉ាបូល$y=x^2+6x$និងបន្ទាត់$y=x-4$។</li>
     <li>គេមានពហុធា$p(x)=x^3-3x^2+6x-40$។
