--- a/GradeTenExercise/grade-ten-set-exercise-2.html
+++ b/GradeTenExercise/grade-ten-set-exercise-2.html
@@ -3,7 +3,7 @@
   <ol class="Roman">
     <li>គេមាន$n(U)=50,$ $n(A)=15,$ $n(B)=25$ និង$n(A\cap B)=5$។
       <ol>
-        <li>ចូរគណនា$n(A\cup B$ និង$n\left(A\cap\overline{B}\right)$។</li>
+        <li>ចូរគណនា$n(A\cup B)$ និង$n\left(A\cap\overline{B}\right)$។</li>
         <li>ចូរតាងសំណុំនេះដោយប្រើដ្យាក្រាមវ៉ិន ។</li>
       </ol>
     </li>
