--- a/GradeTenExercise/grade-ten-polynomial-exercise-3.html
+++ b/GradeTenExercise/grade-ten-polynomial-exercise-3.html
@@ -1,6 +1,6 @@
 <div class="section">
   <p class="leftSection">ប្រធាន</p>
   <ol class="Roman">
-    <li>គណនាវិធីបូកខាងក្រោម</li>
+    <li>គណនាវិធីបូក</li>
   </ol>
 </div>
